Start contributors table

--- a/CONTRIBUTORS.html
+++ b/CONTRIBUTORS.html
@@ -1,3 +1,19 @@
 <!-- ALL-CONTRIBUTORS-LIST:START - Do not remove or modify this section -->
-
+<table>
+    <tr>
+        <td align="center">
+            <a href="https://github.com/akaihola">
+                <img src="https://avatars.githubusercontent.com/u/13725?v=3" width="100px;" alt="@akaihola"/>
+                <br />
+                <sub><b>Antti Kaihola</b></sub>
+            </a>
+            <br />
+            <a href="#question-akaihola" title="Answering Questions">💬</a>
+            <a href="https://github.com/akaihola/darker/commits?author=akaihola"
+               title="Documentation">📖</a>
+            <a href="https://github.com/akaihola/darker/pulls?q=is%3Apr+reviewed-by%3Aakaihola"
+               title="Reviewed Pull Requests">👀</a>
+        </td>
+    </tr>
+</table>
 <!-- ALL-CONTRIBUTORS-LIST:END -->
